modificado index.html

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <body>
         <form action="">
             <input type="text">
+            <p>prueba de master</p>
         </form>
     </body>
 </html>
