--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
             <p>prueba de master</p>
         </form>
         <p>rama prueba</p>
+        <p>cambios temporales stash</p>
+        <p>Arregla icono</p>
     </body>
 </html>
